# Interface-Visual---CLI

./: .env.example  .gitignore  PLANO_MELHORIAS.md  PLANO_SPRINTS_CHAT.md  README.md  pyproject.toml  requirements.txt
Documents/vault-catalogo-site/: .gitignore  README.md  package.json
Documents/vault-catalogo-site/scripts/: build.mjs  install-autostart.sh  serve.mjs  start-service.sh
Documents/vault-catalogo-site/src/: app.js  index.html  styles.css
Documents/vault-catalogo-site/systemd/: vault-catalogo-site.env.example  vault-catalogo-site.service
desktop/: .gitignore  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.node.json
desktop/electron/: main.ts  preload.ts
desktop/src/: app.tsx  core.ts  index.css  main.tsx  vite-env.d.ts
scripts/: install_native_app.sh  publish_github_snapshot.sh  uninstall_native_app.sh
src/cli_harness/: backend_commands.py  bridge.py  cli.py  config.py  history.py  history_cli.py  native_app.py  native_controller.py  repl.py
src/cli_harness/backends/: __init__.py  base.py  dummy.py  repl.py
src/cli_harness/qml/: Main.qml  Main.qml.bak
tests/: test_backend_commands.py  test_history_store.py  test_qml_runtime.py  test_runtime_safety.py
