[project]
name = "waddle"
version = "0.1.0"
description = "Native desktop shell for AI CLI agents (Codex, Qwen)"
requires-python = ">=3.9"
dependencies = [
  "typer[all]>=0.7",
  "httpx>=0.24",
  "python-dotenv>=1.0",
  "PySide6>=6.7"
]

[project.scripts]
waddle = "cli_harness.native_app:main"
cli-ai = "cli_harness.cli:app"
